--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: #e4e9fd;
-  background-image: -webkit-linear-gradient(65deg, red 50%, black 50%);
+  background-image: -webkit-linear-gradient(to right, #000428, #004e92);
   min-height: 800px;
   font-family: 'helvetica neue';
   width: 100%;
@@ -15,13 +15,13 @@ h1 {
 .box {
   max-width: 500px;
   margin: 50px auto;
-  background: white;
+  background: black;
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
 
 #heading {
-  background-color: red;
+  background-color: lightgray;
   text-align: center;
 }
 
@@ -94,7 +94,7 @@ button {
   width: 1.3em;
   border-radius: 50%;
   border-color: transparent;
-  background-color: black;
+  background-color: lightgrey;
   color: #fff;
   font-size: 30px;
   padding-bottom: 6px;
