--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,11 +4,12 @@
 
 
 <div class="box todo">
+  <h3 style="color:red;text-align: center;"><%=error%></h3>
   <div class="userinput-list">
     <!-- Makes POST request to /login route -->
     <form action="/login" method="POST">
       <div class="userinput">
-        <input required type="text" name="username" placeholder="Username">
+        <input required type="text" name="username" placeholder="Email" value="<%=username%>">
       </div>
       <div class="userinput">
         <input required type="password" name="password" placeholder="Password">
