--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") -%>
 <div class="box todo">
     <div class="item item-list">
-        <p class="items" style="text-align: center;">Hello <%=username%></p>
+        <p class="items" style="text-align: center;">Hello <%=name%></p>
         <a class="items title" href="/logout">Logout</a>
     </div>
 </div>
