--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,11 +9,11 @@
     <!-- Makes POST request to /login route -->
     <form action="/register" method="POST">
       <div class="userinput">
-        <input required minlength="6" minlength="12" type="text" name="username" value="<%=username%>"
-          placeholder="Username">
+        <input required minlength="6" minlength="12" type="text" name="name" value="<%=name%>" placeholder="Your Name">
       </div>
       <div class="userinput">
-        <input required minlength="8" minlength="20" type="email" name="email" value="<%=email%>" placeholder="Email">
+        <input required minlength="8" minlength="20" type="email" name="username" value="<%=username%>"
+          placeholder="Email">
       </div>
       <div class="userinput">
         <input required minlength="8" minlength="12" type="password" name="password" placeholder="Password">
