--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EasyToDo</title>
+    <link rel="icon" href="./favicon/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
