--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     <!-- Makes POST request to /login route -->
     <form action="/login" method="POST">
       <div class="userinput">
-        <input required type="text" name="username" placeholder="Email" value="<%=username%>">
+        <input required type="email" name="username" placeholder="Email" value="<%=username%>">
       </div>
       <div class="userinput">
         <input required type="password" name="password" placeholder="Password">
