--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body {
   background-image: linear-gradient(to right, #000428, #004e92);
-  font-family: 'helvetica neue';
+  /*font-family: 'helvetica neue';*/
   width: 100%;
   margin: 0 auto;
   color: lightgray;
