--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,11 @@
 <%- include('partials/header') %>
 <div class="box completed">
-    <h3 style="text-align: center;">Welcome to the <br><br> Easiest ToDo list App around</h3>
+    <p>Welcome to the <br><br> Easiest ToDo list App around</p>
     <p>Try it out and see <br><br>100% free storage. <br><br>All your data is Safe and Secure. </p>
 </div>
 
 <div class="box todo">
-    <div class="item item-list home">
+    <div class="item item-list home userinput">
         <button><a class="title" href="/login">Login</a></button>
 
         <button><a class="title" href="/register">Register</a></button>
