--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 <div class="box completed">
-    <p>Welcome to the <br><br> Easiest ToDo list App around</p>
+    <p>Welcome to the Easiest ToDo list App around</p>
     <p>Try it out and see <br><br>100% free storage. <br><br>All your data is Safe and Secure. </p>
 </div>
 
