--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@ body {
 h1 {
   color: lightgray;
   padding: 5px;
-  box-shadow: 1px 1px 15px 0px turquoise;
+  /*box-shadow: 1px 1px 15px 0px turquoise;*/
 }
 
 h1.auth {
