--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header") -%>
-<div class="box todo">
+<div class="box">
     <div class="item item-list">
         <p class="items" style="text-align: center;">Hello <%=name%></p>
         <a class="items title" href="/logout">Logout</a>
