--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") -%>
 <div class="box">
     <div class="item item-list">
-        <p class="items" style="text-align: center;"><i>Hello <%=name%><i></p>
+        <p class="items" style="text-align: center;"><i>Hello <%=name%></i></p>
         <a class="items title" href="/logout">Logout</a>
     </div>
 </div>
