--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,13 +28,30 @@ h1.auth {
   text-decoration: none;
 }
 
+.home-email-login {
+  color: lightgray;
+  text-decoration: none;
+  outline: 0;
+  border: none;
+  padding: 0 10px;
+}
+
 .box {
   margin: 20px 10px;
-  background: black;
+  /* background: black; */
+  border-radius: 3px;
+}
+
+.box-user {
+  margin: 10px 20px;
+  /* background: black; */
   border-radius: 3px;
 }
 
 .new-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
   box-shadow: 1px 5px 15px -5px yellow;
 }
 
@@ -45,6 +62,22 @@ h1.auth {
 .completed {
   box-shadow: 1px 5px 15px -5px lawngreen;
   margin-bottom: 50px;
+}
+
+.google {
+  box-shadow: 1px 5px 15px -5px lawngreen;
+  padding: 20px 10px;
+}
+
+.home-ad {
+  box-shadow: 1px 5px 15px -5px turquoise;
+}
+
+.home-box {
+  margin: 10px 20px;
+  /* background: black; */
+  border-radius: 3px;
+  box-shadow: 1px 5px 15px -5px lawngreen;
 }
 
 .userinput-list {
@@ -70,8 +103,8 @@ h1.auth {
 }
 
 #heading {
-  margin: 0;
-  background-color: black;
+  margin: 0 auto;
+  /* background-color: black; */
   text-align: center;
 }
 
@@ -177,7 +210,7 @@ input[type='text'] {
   color: lightgrey;
   font-size: 20px;
   font-weight: 200;
-  width: 313px;
+  /* width: 313px; */
 }
 
 input[type='email'],
