--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,8 +1,10 @@
 <%- include("partials/header") -%>
-<div class="box">
-    <div class="item item-list">
-        <p class="items" style="text-align: center;"><i>Hello <%=name%></i></p>
-        <a class="items title" href="/logout">Logout</a>
+<div class="item-list home">
+    <div class="items">
+        <p><i>Hello <%=name%> </i>😊</p>
+    </div>
+    <div class="items">
+        <a class="title" href="/logout">Logout</a>
     </div>
 </div>
 
