--- a/views/newItem.ejs
+++ b/views/newItem.ejs
@@ -1,6 +1,6 @@
-<div class="box new-item">
-    <form class="input" action="/notes" method="POST">
-        <input required type="text" name="newItem" placeholder="New Item" autocomplete="off">
+<div class="new-item">
+    <form action="/notes" method="POST">
+        <input required type="text" name="newItem" placeholder="Add New Item" autocomplete="off">
         <Button type="submit">➕</Button>
     </form>
 </div>
