--- a/views/list.ejs
+++ b/views/list.ejs
@@ -38,10 +38,10 @@
 
 <div class="box completed">
     <div class="completed-list">
-        <div class="items ">
-            <h2 style="color:green">Completed</h2>
+        <div>
+            <h2 class="completed-title" style="color:green">Completed</h2>
         </div>
-        <div class="items ">
+        <div>
             <form action="/deleteAll" method="POST">
                 <button class="delete-all-button" type="submit">Clear All</button>
             </form>
