--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -221,7 +221,7 @@ button.delete-button {
   outline: none;
   color: red;
   background-color: transparent;
-  margin: 0 0px;
+  margin: 10px;
 }
 
 input[type='text'] {
